Prevents wrapping of language text

--- a/packages/ia-components/sandbox/language-select/language-select.less
+++ b/packages/ia-components/sandbox/language-select/language-select.less
@@ -57,6 +57,7 @@
     a {
       display: block;
       padding: (.2 * @rem) (2.5 * @rem);
+      white-space: nowrap;
       &:hover {
         color: @@text_highlight_color;
         background: @text_active_color;
